# graphcast-africa

./: .env.example  .gitignore  README.md  pyproject.toml
config/: domains.yaml
graphcast_africa/: __init__.py
graphcast_africa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
graphcast_africa/data/: base.py  cds.py  grib_file.py  opendata.py  registry.py
graphcast_africa/fields/: graphcast_fields.py
graphcast_africa/model/: assets.py  graphcast_oper.py  graphcast_small.py  input_builder.py
graphcast_africa/normalisation/: normalise.py  stats.py
scripts/: benchmark_gpu.py  download_assets.py  run_forecast.py  run_report.py
tests/: test_data_retrieval.py  test_gpu_benchmark.py  test_model_step.py  test_normalisation.py
